fix no scrolling on ios with ontouchend

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -84,11 +84,11 @@ body {
   font-size: 1.6rem;
   line-height: 1.7;
   color: var(--color-grey-dark-2);
-  box-sizing: border-box;
-  position: relative; }
+  box-sizing: border-box; }
 
 .no-scroll {
-  overflow: hidden; }
+  overflow: hidden;
+  position: fixed; }
 
 .container {
   max-width: 120rem;
